--- a/index.html
+++ b/index.html
@@ -27,3 +27,4 @@
 <p>We are classmates and best friends at school! We’re always kind, helpful, and amusing. We first got our idea when we discovered our shared passions for art and crafts, and also bringing happiness to people!</p>
 
 <h3>Dorcas and Anjali</h3>
+<img src="https://github.com/DY1986/BUSINESSFAIR-2/blob/main/WechatIMG925.jpg" />
